{
    "name": "ShipInput",
    "maps": [
        {
            "name": "GamePadGamePlay",
            "id": "59b2fece-f3d8-4cfc-9f46-50925efc2533",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "ebecb520-4e3f-445f-a592-ff7abb0ca970",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Forward",
                    "type": "Button",
                    "id": "2a9b7a62-35c3-4a97-a7a9-16fe270f8627",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Reverse",
                    "type": "Button",
                    "id": "cb734884-43d0-4321-b7c6-39f6c696de03",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Phaser",
                    "type": "Button",
                    "id": "42a7524e-9dbc-47f1-bbad-a25e2f861ed4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "8af74a1f-6418-4878-9db8-d5b50f27269b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2f1d9366-1cf1-4c56-8f01-c0d390cafcb7",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "94a08a6a-51b2-4e79-b83c-b0bbd8208e2d",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a13a2cae-dcb1-4f89-a68c-cb07a6570130",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reverse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a6079152-e2e4-4c19-94d2-36704ab8f929",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Phaser",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "868c3f06-47f0-4328-99c6-fb9c850034ed",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "KMGamePlay",
            "id": "6305db50-3c6e-4e95-8e47-440bacc9e46f",
            "actions": [
                {
                    "name": "Phaser",
                    "type": "Button",
                    "id": "ff79f1a4-f036-4d15-8776-320606d4f491",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Reverse",
                    "type": "Button",
                    "id": "9cfe3c99-8696-4e22-a01f-e7e998d001e9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Forward",
                    "type": "Button",
                    "id": "a95701de-05fd-43e6-aa17-b972b3e86725",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Point",
                    "type": "PassThrough",
                    "id": "d7bfeb0a-f15e-47d2-9e30-db62947e6ea4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Tab",
                    "type": "Button",
                    "id": "bba7aa37-5726-4928-a666-5064caf5a19c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Esc",
                    "type": "Button",
                    "id": "829c92a4-4a6d-47dc-aa2a-7b7d665c8acb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Roll_Port",
                    "type": "Button",
                    "id": "8f6444e3-5fbc-41c3-a45c-6ec3d81af2bb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Roll_Starboard",
                    "type": "Button",
                    "id": "f2e2783d-df6c-4148-9d7b-a7dae2e6eb65",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d5a1a621-c29f-4d99-a941-16358039831e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Phaser",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6dcb9c51-8919-44c3-bbb2-dd1a2d444497",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reverse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e600910a-799e-4961-b2d7-075f9902521d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "95c67863-6180-4d05-96a3-5cbd29366f72",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a2313817-54d1-4af6-948f-7ae1879f1f0b",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "052b75d1-e168-43c4-b8ce-7955d40c660b",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Esc",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4186bdfb-6c27-4393-85d0-68ba13e5e4c0",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll_Port",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "89208f72-db1e-4f3b-a5e2-5b5bf43ffaa3",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll_Starboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}